<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:paddingTop="100dp"
        >

    <Button
       android:id="@+id/personal_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/personal_button"
        android:textAllCaps="true"
        android:textSize="20dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:background="@color/orange"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:id="@+id/academic_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/academic_button"
        android:textAllCaps="true"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:background="@color/orange"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:id="@+id/gallery_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/gallery_button"
        android:textAllCaps="true"
        android:textSize="20dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:background="@color/orange"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:id="@+id/others_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/others_button"
        android:textAllCaps="true"
        android:textSize="20dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:background="@color/orange"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:id="@+id/welcome_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/welcome_text"
        android:textAllCaps="true"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:background="@color/orange"
        android:layout_gravity="center_horizontal"
        />
    </LinearLayout>



</LinearLayout>